--- a/Controls/Components/LyricsDisplaySettingsControl.axaml
+++ b/Controls/Components/LyricsDisplaySettingsControl.axaml
@@ -36,7 +36,8 @@
                             <ComboBoxItem>网易云音乐</ComboBoxItem>
                             <ComboBoxItem>酷狗音乐</ComboBoxItem>
                             <ComboBoxItem>汽水音乐</ComboBoxItem>
-                            <ComboBoxItem IsEnabled="False" Foreground="Gray">酷我音乐(尚未适配)</ComboBoxItem>
+                            <ComboBoxItem>Lyricify Lite</ComboBoxItem>
+                            <ComboBoxItem IsEnabled="False" Foreground="Gray">酷我音乐(将不会适配)</ComboBoxItem>
                             <ComboBoxItem IsEnabled="False" Foreground="Gray">Apple Music(将不会适配)</ComboBoxItem>
                         </ComboBox>
                     </controls:SettingsExpander.Footer>
