--- a/SettingsPage/AboutSettingsPage.axaml
+++ b/SettingsPage/AboutSettingsPage.axaml
@@ -48,7 +48,7 @@
                         <StackPanel Grid.Column="1" VerticalAlignment="Center">
                             <TextBlock>
                                 <Run Text="SystemTools" FontSize="24" />
-                                <Run Text="{Binding ViewModel.PluginVersion}" />
+                                <Run Text="{Binding PluginVersion}" />
                             </TextBlock>
                             <TextBlock Text="Copyright © 2026 Programmer_Wang"
                                        FontSize="12"
@@ -97,28 +97,6 @@
                     </Grid>
                 </controls:SettingsExpanderItem>
             </Border>
-            
-            <!--<controls:InfoBar x:Name="AnnouncementBar" 
-                              IsOpen="False" 
-                              IsVisible="True" 
-                              Severity="Success" 
-                              Message="{Binding StaticAnnouncement}"
-                              Closed="AnnouncementBar_OnClosed"
-                              Margin="0,0,0,12">
-                <Button Padding="8,5,8,5"
-                        Margin="0,-15,0,5"
-                        BorderBrush="Transparent"
-                        Background="#306bcc5f"
-                        Command="{x:Static ci:UriNavigationCommands.UriNavigationCommand}"
-                        CommandParameter="{Binding QqGroupUrl}">
-                    <StackPanel Orientation="Horizontal">
-                        <ci:LucideIcon Glyph="&#xE574;"
-                                       Foreground="{DynamicResource MaterialDesignBody}"
-                                       FontSize="18"/>
-                        <Label Margin="0,0,0,3" Content="加入群组"/>
-                    </StackPanel>
-                </Button>
-            </controls:InfoBar>-->
 
             <!-- 标签页 -->
             <Border ClipToBounds="True" CornerRadius="4">
@@ -127,7 +105,6 @@
                             Background="{DynamicResource LayerOnMicaBaseAltFillColorDefaultBrush}"
                             BorderBrush="{DynamicResource CardStrokeColorDefaultBrush}"
                             BorderThickness="0,0,0,1">
-
                         <TabStrip Classes="compact"
                                   Theme="{StaticResource TabStripStyle}"
                                   SelectedIndex="{Binding SelectedTabIndex, Mode=TwoWay}">
@@ -143,17 +120,29 @@
                         </TabStrip>
                     </Border>
 
-                    <!-- Markdown 内容 -->
-                    <controls:SettingsExpanderItem Grid.Row="1">
-                        <mdxaml:MarkdownScrollViewer
-                            Engine="{x:Static helpers:MarkdownConvertHelper.Engine}"
-                            Margin="6,4,6,4"
-                            Markdown="{Binding CurrentMarkdownContent}">
-                            <mdxaml:MarkdownScrollViewer.Styles>
-                                <StyleInclude Source="avares://ClassIsland.Core/Themes/RichTextStyles.axaml" />
-                            </mdxaml:MarkdownScrollViewer.Styles>
-                        </mdxaml:MarkdownScrollViewer>
-                    </controls:SettingsExpanderItem>
+                    <Border Grid.Row="1" BorderThickness="0">
+                        <StackPanel>
+                            <StackPanel IsVisible="{Binding IsHelpTab}">
+                                <controls:SettingsExpander Header="Lyricify Lite 适配帮助"
+                                                           Description="点击查看 Lyricify Lite 适配说明"
+                                                           IconSource="{ci:FluentIconSource &#xE236;}"
+                                                           Click="OnLyricifyLiteHelpClick"
+                                                           HorizontalAlignment="Stretch"
+                                                           ActionIconSource="{ci:FluentIconSource &#xEC2E;} "
+                                                           IsClickEnabled="True"/>
+                            </StackPanel>
+
+                            <mdxaml:MarkdownScrollViewer 
+                                IsVisible="{Binding IsNotHelpTab}"
+                                Engine="{x:Static helpers:MarkdownConvertHelper.Engine}"
+                                Margin="6,4,6,4"
+                                Markdown="{Binding CurrentMarkdownContent}">
+                                <mdxaml:MarkdownScrollViewer.Styles>
+                                    <StyleInclude Source="avares://ClassIsland.Core/Themes/RichTextStyles.axaml" />
+                                </mdxaml:MarkdownScrollViewer.Styles>
+                            </mdxaml:MarkdownScrollViewer>
+                        </StackPanel>
+                    </Border>
                 </Grid>
             </Border>
         </StackPanel>
